--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,9 +20,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
+    - name: install portaudio
+      run: sudo apt install portaudio19-dev
     - name: Install dependencies
       run: |
-        sudo apt install portaudio19-dev
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
